; ModuleID = '/home/carl/AnghaBench/nnn/src/extr_nnn.c_confirm_force.c'
source_filename = "/home/carl/AnghaBench/nnn/src/extr_nnn.c_confirm_force.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.confirm_force.str = private unnamed_addr constant [64 x i8] c"forcibly remove current file (unrecoverable)? [y/Y confirms]\00\00\00\00", align 16
@.str = private unnamed_addr constant [59 x i8] c"forcibly remove %d file(s) (unrecoverable)? [y/Y confirms]\00", align 1
@nselected = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i32)* @confirm_force to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @confirm_force(i32 %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i32, align 4
  %4 = alloca [64 x i8], align 16
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = bitcast [64 x i8]* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %6, i8* align 16 getelementptr inbounds ([64 x i8], [64 x i8]* @__const.confirm_force.str, i32 0, i32 0), i64 64, i1 false)
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = getelementptr inbounds [64 x i8], [64 x i8]* %4, i64 0, i64 0
  %11 = load i32, i32* @nselected, align 4
  %12 = call i32 @snprintf(i8* %10, i32 64, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i32 %11)
  br label %13

13:                                               ; preds = %9, %1
  %14 = getelementptr inbounds [64 x i8], [64 x i8]* %4, i64 0, i64 0
  %15 = call i32 @get_input(i8* %14)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = icmp eq i32 %16, 121
  br i1 %17, label %21, label %18

18:                                               ; preds = %13
  %19 = load i32, i32* %5, align 4
  %20 = icmp eq i32 %19, 89
  br i1 %20, label %21, label %22

21:                                               ; preds = %18, %13
  store i8 102, i8* %2, align 1
  br label %23

22:                                               ; preds = %18
  store i8 105, i8* %2, align 1
  br label %23

23:                                               ; preds = %22, %21
  %24 = load i8, i8* %2, align 1
  ret i8 %24
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #2

declare dso_local i32 @get_input(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
